--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Supabase Chat</title>
+  <style>
+    body { font-family: sans-serif; max-width: 600px; margin: 0 auto; padding: 1rem; }
+    #messages { border: 1px solid #ccc; padding: 1rem; height: 300px; overflow-y: auto; margin-bottom: 1rem; }
+    .message { margin-bottom: 0.5rem; }
+  </style>
+  <script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 
+    // 🔑 Replace with your Supabase credentials
+    const supabaseUrl = 'https://your-project-url.supabase.co';
+    const supabaseKey = 'your-anon-public-key';
+    const supabase = createClient(supabaseUrl, supabaseKey);
+
+    let username = '';
+
+    async function loadMessages() {
+      const { data, error } = await supabase
+        .from('messages')
+        .select('*')
+        .order('created_at', { ascending: true });
+
+      if (error) {
+        console.error(error);
+        return;
+      }
+
+      const messagesDiv = document.getElementById('messages');
+      messagesDiv.innerHTML = '';
+      data.forEach(msg => {
+        const el = document.createElement('div');
+        el.className = 'message';
+        el.textContent = `${msg.username}: ${msg.content}`;
+        messagesDiv.appendChild(el);
+      });
+      messagesDiv.scrollTop = messagesDiv.scrollHeight;
+    }
+
+    async function sendMessage(content) {
+      const { error } = await supabase.from('messages').insert([
+        { username, content }
+      ]);
+      if (error) console.error(error);
+    }
+
+    function setupRealtime() {
+      supabase
+        .channel('public:messages')
+        .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
+          const msg = payload.new;
+          const el = document.createElement('div');
+          el.className = 'message';
+          el.textContent = `${msg.username}: ${msg.content}`;
+          document.getElementById('messages').appendChild(el);
+          document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
+        })
+        .subscribe();
+    }
+
+    window.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('username-form').addEventListener('submit', e => {
+        e.preventDefault();
+        username = document.getElementById('username').value;
+        document.getElementById('username-section').style.display = 'none';
+        document.getElementById('chat-section').style.display = 'block';
+        loadMessages();
+        setupRealtime();
+      });
+
+      document.getElementById('chat-form').addEventListener('submit', e => {
+        e.preventDefault();
+        const input = document.getElementById('message');
+        const content = input.value.trim();
+        if (content) {
+          sendMessage(content);
+          input.value = '';
+        }
+      });
+    });
+  </script>
+</head>
+<body>
+  <h1>🗨️ Supabase Chat</h1>
+
+  <div id="username-section">
+    <form id="username-form">
+      <label>Choose a username:</label>
+      <input type="text" id="username" required />
+      <button type="submit">Enter Chat</button>
+    </form>
+  </div>
+
+  <div id="chat-section" style="display:none;">
+    <div id="messages"></div>
+    <form id="chat-form">
+      <input type="text" id="message" placeholder="Type your message..." required autocomplete="off"/>
+      <button type="submit">Send</button>
+    </form>
+  </div>
+</body>
+</html>
