--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </script>
 </head>
 <body>
-  <h1>🗨️ Supabase Chat</h1>
+  <h1>🗨️Dis-Site</h1>
 
   <div id="username-section">
     <form id="username-form">
