--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     function setupRealtime() {
       supabase
-        .channel('public:messages')
+        .channel('messages')
         .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
           const msg = payload.new;
           const el = document.createElement('div');
